# Advanced-Data-Structures

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  SingleLinkedList.cpp  suffix_tree.cpp
Dynamic Interval Tree/: IntervalTree.cpp  IntervalTree.h  README.md
Dynamic Interval Tree/IntervalNode/: IntervalNode.cpp  IntervalNode.h
Suffix Tree/: README.md  SingleLinkedList.cpp  SuffixTree.cpp  SuffixTree.h  suffix_tree.cpp
Suffix Tree/SuffixNode/: SuffixNode.cpp  SuffixNode.h
Utilities/SingleLinkedList/: SingleLinkedList.cpp  SingleLinkedList.h
Utilities/SingleLinkedList/SingleLinkedListNode/: SingleLinkedListNode.cpp  SingleLinkedListNode.h
